test/corpus/attributes.txt
================================================================================
@class
================================================================================

<div @class('test') id="test" style="test" > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string))
      (html_attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (html_attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
@style
================================================================================

<div @style('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string)))
    (end_tag
      (tag_name))))

================================================================================
@checked
================================================================================

<div @checked('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string)))
    (end_tag
      (tag_name))))

================================================================================
@selected
================================================================================

<div @selected('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string)))
    (end_tag
      (tag_name))))

================================================================================
@disabled
================================================================================

<div @disabled('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string)))
    (end_tag
      (tag_name))))

================================================================================
@readonly
================================================================================

<div @readonly('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string)))
    (end_tag
      (tag_name))))

================================================================================
@required
================================================================================

<div @required('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (blade_attribute
        (string)))
    (end_tag
      (tag_name))))
