test/corpus/authorization.txt
================================================================================
@can
================================================================================

@can('update', $post)
    <!-- comment -->
@elsecan('create', App\Models\Post::class)
    Hello world
@else
    Hello world
@endcan

--------------------------------------------------------------------------------

(document
  (authorization
    (can
      (string)
      (variable_name
        (name))
      (conditional_body
        (comment)
        (conditional_keyword
          (elseif
            (string)
            (class_constant_access_expression
              (qualified_name
                (namespace_name
                  (name)
                  (name))
                (name))
              (name))))
        (text)
        (conditional_keyword)
        (text)))))

================================================================================
@cannot
================================================================================

@cannot('update', $post)
    <!-- comment -->
@elsecannot('create', App\Models\Post::class)
    Hello world
@endcannot

--------------------------------------------------------------------------------

(document
  (authorization
    (cannot
      (string)
      (variable_name
        (name))
      (conditional_body
        (comment)
        (conditional_keyword
          (elseif
            (string)
            (class_constant_access_expression
              (qualified_name
                (namespace_name
                  (name)
                  (name))
                (name))
              (name))))
        (text)))))

================================================================================
@canany
================================================================================

@canany(['update', 'view', 'delete'], $post)
    <!-- comment -->
@elsecanany(['create'], \App\Models\Post::class)
    hello world
@endcanany

--------------------------------------------------------------------------------

(document
  (authorization
    (canany
      (array_creation_expression
        (array_element_initializer
          (array_element_value_initializer
            (string)))
        (array_element_initializer
          (array_element_value_initializer
            (string)))
        (array_element_initializer
          (array_element_value_initializer
            (string))))
      (variable_name
        (name))
      (conditional_body
        (comment)
        (conditional_keyword
          (elseif
            (array_creation_expression
              (array_element_initializer
                (array_element_value_initializer
                  (string))))
            (class_constant_access_expression
              (qualified_name
                (namespace_name
                  (name)
                  (name))
                (name))
              (name))))
        (text)))))

================================================================================
@feature
================================================================================

@feature('site-redesign')
    hello world
@elsefeature('purchase-button', 'seafoam-green')
    hello world
@else
    hello world
@endfeature

--------------------------------------------------------------------------------

(document
  (feature
    (string)
    (text)
    (else_feature
      (string)
      (string))
    (text)
    (conditional_keyword)
    (text)))

================================================================================
custom directive
================================================================================

@disk('local')
    test
@elsedisk('s3')
    test
@else
    test
@enddisk

@unlessdisk('local')
    test
@enddisk

--------------------------------------------------------------------------------

(document
  (custom
    (string)
    (conditional_body
      (text)
      (conditional_keyword
        (elseif
          (string)))
      (text)
      (conditional_keyword)
      (text)))
  (custom
    (string)
    (conditional_body
      (text))))

================================================================================
complex custom directive
================================================================================
@example('test')
    @example('test')
        test
    @endexample
@endexample

--------------------------------------------------------------------------------

(document
  (custom
    (string)
    (conditional_body
      (custom
        (string)
        (conditional_body
          (text))))))
