test/corpus/components.txt
================================================================================
Nested <dot> notation
================================================================================

<x-card>
    <x-card.header>...</x-card.header>
    <x-card.body>...</x-card.body>
</x-card>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Heavily Nested
================================================================================

    <x-form.input.test someAttribute="value">...</x-form.input.test>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Package Component
================================================================================

<x-nightshade::calendar />
<x-nightshade::color-picker />

--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (tag_name)))
  (element
    (self_closing_tag
      (tag_name))))

================================================================================
Self Closing Components
================================================================================

<x-package-alert/>
--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (tag_name))))

================================================================================
Nested Self Closing Components
================================================================================

<x-package-alert.success/>
--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (tag_name))))

================================================================================
PHP syntax inside attribute values
================================================================================


<div id="{{$php}}"> ... </div>
<img id="{{$php}}"/>
<div class="bg-red-{{$php}}"> ... </div>
<div class="bg-{{$php}}-500"> ... </div>
<div class="{{$php}}-red-500"> ... </div>

<div id='{{$php}}'> ... </div>
<img id='{{$php}}'/>
<div class='bg-red-{{$php}}'> ... </div>
<div class='bg-{{$php}}-500'> ... </div>
<div class='{{$php}}-red-500'> ... </div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (php_statement
            (variable_name
              (name))))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (php_statement
            (variable_name
              (name)))))))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)
          (php_statement
            (variable_name
              (name))))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)
          (php_statement
            (variable_name
              (name)))
          (attribute_value))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (php_statement
            (variable_name
              (name)))
          (attribute_value))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (php_statement
            (variable_name
              (name))))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (php_statement
            (variable_name
              (name)))))))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)
          (php_statement
            (variable_name
              (name))))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)
          (php_statement
            (variable_name
              (name)))
          (attribute_value))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (php_statement
            (variable_name
              (name)))
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Expression attribute values
================================================================================

<div :id="$php"> ... </div>
<img :id="$php"/>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (variable_name
            (name)))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (variable_name
            (name)))))))

================================================================================
Short attribute syntax
================================================================================

<div :$id> ... </div>
<img :$id/>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (variable_name
          (name))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (variable_name
          (name))))))
