test/corpus/conditionals.txt
================================================================================
@if
================================================================================

@if (true)
    test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (text))))

================================================================================
@if nesting
================================================================================

@if(true)
        @if(true)
            test
        @endif
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (conditional
        (boolean)
        (conditional_body
          (text))))))

================================================================================
conditional keywords
================================================================================

@if (true)
    test
@elseif (true)
    test
@else
    test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (text)
      (conditional_keyword
        (directive)
        (boolean))
      (text)
      (conditional_keyword
        (directive))
      (text))))

================================================================================
@unless
================================================================================

@unless(true)
        test
@endunless

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (text))))

================================================================================
@isset
================================================================================

@isset(true)
        test
@endisset

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (text))))

================================================================================
@empty
================================================================================

@empty(true)
        test
@endempty

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (text))))

================================================================================
@auth
================================================================================

@auth
        test
@endauth

--------------------------------------------------------------------------------

(document
  (conditional
    (conditional_body
      (text))))

================================================================================
@auth with parameters
================================================================================

@auth('test')
        test
@endauth

--------------------------------------------------------------------------------

(document
  (conditional
    (string)
    (conditional_body
      (text))))

================================================================================
@guest
================================================================================

@guest
        test
@endguest

--------------------------------------------------------------------------------

(document
  (conditional
    (conditional_body
      (text))))

================================================================================
@guest with parameters
================================================================================

@guest('test')
        test
@endguest

--------------------------------------------------------------------------------

(document
  (conditional
    (string)
    (conditional_body
      (text))))

================================================================================
@production
================================================================================

@production
        test
@endproduction

--------------------------------------------------------------------------------

(document
  (conditional
    (conditional_body
      (text))))

================================================================================
@env
================================================================================

@env('test')
        test
@endenv

--------------------------------------------------------------------------------

(document
  (conditional
    (string)
    (conditional_body
      (text))))

================================================================================
@hasSection
================================================================================

@hasSection('test')
        test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (string)
    (conditional_body
      (text))))

================================================================================
@sectionMissing
================================================================================

@sectionMissing('test')
        test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (string)
    (conditional_body
      (text))))

================================================================================
@error
================================================================================

@error (true)
    test
@enderror

--------------------------------------------------------------------------------

(document
  (conditional
    (boolean)
    (conditional_body
      (text))))

================================================================================
@can
================================================================================

@can('update', $post)
    <!-- comment -->
@elsecan('create', App\Models\Post::class)
    Hello world
@else
    Hello world
@endcan

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (comment)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (conditional_keyword
      (directive))
    (text)
    (directive_end)))

================================================================================
@cannot
================================================================================

@cannot('update', $post)
    <!-- comment -->
@elsecannot('create', App\Models\Post::class)
    Hello world
@endcannot

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (comment)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (directive_end)))

================================================================================
@canany
================================================================================

@canany(['update', 'view', 'delete'], $post)
    <!-- comment -->
@elsecanany(['create'], \App\Models\Post::class)
    hello world
@endcanany

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (comment)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (directive_end)))

================================================================================
@feature
================================================================================

@feature('site-redesign')
    hello world
@elsefeature('purchase-button', 'seafoam-green')
    hello world
@else
    hello world
@endfeature

--------------------------------------------------------------------------------

(document
  (conditional
    (string)
    (text)
    (string)
    (string)
    (text)
    (conditional_keyword
      (directive))
    (text)))

================================================================================
custom directive
================================================================================

@disk('local')
    test
@elsedisk('s3')
    test
@else
    test
@enddisk

@unlessdisk('local')
    test
@enddisk

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (string)
    (conditional_body
      (text)
      (conditional_keyword
        (directive)
        (string))
      (text)
      (conditional_keyword
        (directive))
      (text))
    (directive_end))
  (conditional
    (directive_start)
    (string)
    (conditional_body
      (text))
    (directive_end)))

================================================================================
complex custom directive
================================================================================
@example('test')
    @example('test')
        test
    @endexample
@endexample

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (string)
    (conditional_body
      (conditional
        (directive_start)
        (string)
        (conditional_body
          (text))
        (directive_end)))
    (directive_end)))
