test/corpus/conflicts.txt
================================================================================
Orphan Punctuation Marks
================================================================================

@ { } {} () ! ( )

--------------------------------------------------------------------------------

(document
  (text))

================================================================================
text starting with @
================================================================================

test@test.com

@test

@custom('test')
    hello
@endcustom

--------------------------------------------------------------------------------

(document
  (text)
  (conditional
    (directive_start)
    (string)
    (text)
    (directive_end)))

================================================================================
Comments Ending with Punctuation Conflict
================================================================================

{{--)--}}
{{--}--}}
{{--@--}}
{{--!--}}

--------------------------------------------------------------------------------

(document
  (comment)
  (comment)
  (comment)
  (comment))
